--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -74,8 +74,15 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="0dp"
             />
-        
-        
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/list1"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="0dp"
+            />
+
     </LinearLayout>
 
 
