--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -58,12 +58,43 @@
             android:id="@+id/image_layout">
 
             <ImageView
-                android:id="@+id/animal_icon"
+                android:id="@+id/animal_icon1"
                 android:tag="image_tag"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:visibility="gone"
+                android:src="@drawable/elephant"
+                android:layout_gravity="center|center_vertical"/>
+
+            <ImageView
+                android:id="@+id/animal_icon2"
+                android:tag="image_tag"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:visibility="gone"
+                android:src="@drawable/elephant"
+                android:layout_gravity="center|center_vertical"/>
+
+            <ImageView
+                android:id="@+id/animal_icon3"
+                android:tag="image_tag"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_margin="2dp"
                 android:src="@drawable/elephant"
+                android:visibility="gone"
+                android:layout_gravity="center|center_vertical"/>
+
+            <ImageView
+                android:id="@+id/animal_icon4"
+                android:tag="image_tag"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:src="@drawable/elephant"
+                android:visibility="gone"
                 android:layout_gravity="center|center_vertical"/>
 
 
