--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -15,7 +15,7 @@
     android:layout_width="65dp"
     android:layout_height="60dp"
     android:id="@+id/title_image"
-    android:src="@drawable/popuplogo"
+    android:src="@drawable/pawprint"
     android:layout_gravity="center_horizontal"/>
 
 
