--- a/app/src/main/res/layout/custom_listview.xml
+++ b/app/src/main/res/layout/custom_listview.xml
@@ -23,6 +23,7 @@
         android:id="@+id/custom_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:src="@drawable/pawprint"
         android:foregroundGravity="center"/>
 
     <TextView
