--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorTransparent">#00000000</color>
     <color name="indigo">#1A237E</color>
-    <color name="white">#ffffff</color>
+    <color name="white">#FFFFFF</color>
     <color name="grey">#90C9F5</color>
+    <color name="red">#EB064F</color>
+
 </resources>
