--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/activity_main"
+    android:background="@color/cream"
     android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
     tools:context=".MainActivity">
-<!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="25dp">
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/search"
-        android:background="@drawable/round_shape"
-        android:hint="   Search Animals"/>
 
-    </LinearLayout>
-
-!-->
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -34,14 +18,6 @@
         android:layout_height="50dp"
         android:orientation="horizontal">
 
-       <!-- <ToggleButton
-            android:id="@+id/toggle_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Camera View"
-            android:textOn="Animal View"
-            android:textOff="Camera View" />-->
 
         <ImageView
             android:layout_width="50dp"
@@ -53,9 +29,9 @@
             android:id="@+id/toggle_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:padding="15dp"
             android:textColor="#fad284"
-            android:checked="true"
             android:textColorHint="#fad284"
             android:textOff="A"
             android:textOn="C" />
@@ -80,38 +56,44 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:maxLines="1"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textColor="@color/colorPrimaryDark"
             android:id="@+id/search_box"
-            android:hint="Enter search term"/>
+            android:hint="Search Animal"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:id="@+id/animal_list_ll"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/curved_bg">
 
         </LinearLayout>
 
     </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/camera_view_container"
-            android:layout_width="match_parent"
 
-            android:layout_height="match_parent">
-<android.support.v4.widget.SwipeRefreshLayout
+    <LinearLayout
+        android:id="@+id/camera_view_container"
+        android:layout_width="match_parent"
 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/swipe">
+        android:layout_height="match_parent">
+
+        <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/swipe">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp">
         </android.support.v7.widget.RecyclerView>
-</android.support.v4.widget.SwipeRefreshLayout>
-        </LinearLayout>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </LinearLayout>
 
 
 
