--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cream"
     android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
     tools:context=".SplashActivity">
 
@@ -12,14 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="200dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:fontFamily="serif-monospace"
         android:textColor="@color/indigo"
-        android:textSize="22sp"
+        android:textSize="25sp"
         android:gravity="center_horizontal"
         android:text="@string/app_name"/>
 
