--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -12,8 +12,8 @@
     android:layout_gravity="center">
 
 <ImageView
-    android:layout_width="65dp"
-    android:layout_height="60dp"
+    android:layout_width="55dp"
+    android:layout_height="50dp"
     android:id="@+id/title_image"
     android:src="@drawable/pawprint"
     android:layout_gravity="center_horizontal"/>
@@ -37,25 +37,26 @@
         android:layout_width="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_height="35dp"
-        android:background="@color/grey">
+        >
             <TextView
                 android:id="@+id/noofanimals"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
+                android:textSize="14dp"
+                android:textStyle="bold"
                 android:layout_gravity="center"
                 android:text="Number of Animals Present: "
-                android:textColor="@color/colorAccent"/>
+                android:textColor="@color/yellow"/>
 
 
             <TextView
                 android:id="@+id/noofanimals_result"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:layout_marginStart="30dp"
                 android:layout_gravity="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/blue"/>
 
     </LinearLayout>
 
